a1/brendan_gordon/TEST_PROGRAMS/invalidtype/prabhjot_sandhu/undeclared.min
var x:int;
var y:int;

read x;
read y;

z = x + y;
print z;

